syntax = "proto3";

package legalentities;

import "addresses/addresses.proto";
import "common/errors.proto";
import "common/statuses.proto";
import "common/numbers.proto";
import "contacts/contacts.proto";
import "countries/countries.proto";
import "google/protobuf/timestamp.proto";
import "uoms/uoms.proto";

enum Type {
  TYPE_UNSPECIFIED = 0;
  TYPE_DAVENSI = 1;
  TYPE_CUSTOMER = 64;
  TYPE_PARTNER = 128;
}

message TypeList {
  repeated Type list = 1;
}

// Backed by table 'legalentities'
message LegalEntity {
  string id = 1; // System Key: id is generated by the server or the database
  string name = 2; // Human-Readable Key (unique identifier)
  Type type = 3;
  countries.Country incorporation_country = 4;
  optional string incorporation_locality = 5;
  optional string business_registration_no = 6;
  optional string business_registration_alt_no = 7;
  optional google.protobuf.Timestamp valid_until = 8;
  optional string tax_id = 9;
  uoms.UoM currency1 = 10;
  optional uoms.UoM currency2 = 11;
  optional uoms.UoM currency3 = 12;
  // TO-DO: add more fields from table 'legalentities'
  common.Status status = 13;
  optional addresses.LabeledAddressList addresses = 14; // backed by table 'legalentities_addresses'
  optional contacts.LabeledContactList contacts = 15; // backed by table 'legalentities_contacts'
}

message List {
  repeated LegalEntity list = 1;
}

message Select {
  oneof select {
    string by_id = 1;
    string by_name = 2;
  }
}

message SelectList {
  repeated Select list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  string name = 1;
  Type type = 2;
  countries.Select incorporation_country = 3; // Country is required
  optional string incorporation_locality = 4;
  optional string business_registration_no = 5;
  optional string business_registration_alt_no = 6;
  optional google.protobuf.Timestamp valid_until = 7;
  optional string tax_id = 8;
  uoms.Select currency1 = 9; // At least one currency must be specified
  optional uoms.Select currency2 = 10;
  optional uoms.Select currency3 = 11;
  optional common.Status status = 12; // Default: STATUS_UNSPECIFIED, which means  needs to be activated after creation
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    LegalEntity legal_entity = 2;
  }
}

message UpdateRequest {
  Select select = 1;
  optional string name = 3;
  optional Type type = 4;
  optional countries.Select incorporation_country = 5;
  optional string incorporation_locality = 6;
  optional string business_registration_no = 7;
  optional string business_registration_alt_no = 8;
  optional google.protobuf.Timestamp valid_until = 9;
  optional string tax_id = 10;
  optional uoms.Select currency1 = 11;
  optional uoms.Select currency2 = 12;
  optional uoms.Select currency3 = 13;
  optional common.Status status = 14;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    LegalEntity legal_entity = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  Select select = 1;
  optional bool with_addresses = 3;
  optional bool with_contacts = 4;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    LegalEntity legal_entity = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional string name = 1;
  optional TypeList type = 2;
  optional countries.GetListRequest incorporation_country = 3;
  optional string incorporation_locality = 4;
  optional string business_registration_no = 5;
  optional string business_registration_alt_no = 6;
  optional common.TimestampValueList valid_until_from = 7;
  optional common.TimestampValueList valid_until_to = 8;
  optional string tax_id = 9;
  optional uoms.GetListRequest currency1 = 10;
  optional uoms.GetListRequest currency2 = 11;
  optional uoms.GetListRequest currency3 = 12;
  optional common.StatusList status = 13;
  optional addresses.GetListRequest addresses = 14; // "with_addresses" is implicit when specifying address search criteria
  optional contacts.GetListRequest contacts = 15; // "with_contacts" is implicit when specifying contact search criteria
}

message GetListResponse {
  oneof response {
    common.Error error = 1;
    LegalEntity legal_entity = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED
message DeleteRequest {
 Select select = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    LegalEntity legal_entity = 2;
  }
}

// The following messages manage the assignment of addresses and contacts to legal entities

message Address {
  string id = 1;
  string name = 2;
  addresses.LabeledAddress address = 3;
}

message AddressList {
  string id = 1;
  string name = 2;
  addresses.LabeledAddressList addresses = 3;
}

message SetAddressesRequest {
  Select legal_entity = 1;
  addresses.SetLabeledAddressList addresses = 2;
}

message SetAddressesResponse {
  oneof response {
    common.Error error = 1;
    AddressList addresses = 2;
  }
}

message AddAddressesRequest {
  Select legal_entity = 1;
  addresses.SetLabeledAddressList addresses = 2;
}

message AddAddressesResponse {
  oneof response {
    common.Error error = 1;
    AddressList addresses = 2;
  }
}

message UpdateAddressRequest {
  Select legal_entity = 1;
  addresses.UpdateLabeledAddressRequest address = 2;
}

message UpdateAddressResponse {
  oneof response {
    common.Error error = 1;
    Address address = 2;
  }
}

message LabelList {
  repeated string list = 1;
}

// A remove addresses request is just an address update request with status set to TERMINATED in table 'legalentities_addresses'
message RemoveAddressesRequest {
  Select legal_entity = 1;
  LabelList labels = 2;
}

message RemoveAddressesResponse {
  oneof response {
    common.Error error = 1;
    AddressList addresses = 2;
  }
}

message Contact {
  string id = 1;
  string name = 2;
  contacts.LabeledContact contact = 3;
}

message ContactList {
  string id = 1;
  string name = 2;
  contacts.LabeledContactList contacts = 3;
}

message SetContactsRequest {
  Select legal_entity = 1;
  contacts.SetLabeledContactList contacts = 2;
}

message SetContactsResponse {
  oneof response {
    common.Error error = 1;
    ContactList contacts = 2;
  }
}

message AddContactsRequest {
  Select legal_entity = 1;
  contacts.SetLabeledContactList contacts = 2;
}

message AddContactsResponse {
  oneof response {
    common.Error error = 1;
    ContactList contacts = 2;
  }
}

message UpdateContactRequest {
  Select legal_entity = 1;
  contacts.UpdateLabeledContactRequest contact = 2;
}

message UpdateContactResponse {
  oneof response {
    common.Error error = 1;
    Contact contact = 2;
  }
}

// A remove contacts request is just a contact update request with status set to TERMINATED in table 'legalentities_contacts'
message RemoveContactsRequest {
  Select legal_entity = 1;
  LabelList labels = 2;
}

message RemoveContactsResponse {
  oneof response {
    common.Error error = 1;
    ContactList contacts = 2;
  }
}
