syntax = "proto3";

package orgs;

import "orgs/orgs.proto";

service Service {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc GetList(GetListRequest) returns (stream GetListResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
